Added password authentication
